--- a/src/app/select-room/select-room.component.html
+++ b/src/app/select-room/select-room.component.html
@@ -14,8 +14,7 @@
         <div class="font-bold text-xl mb-2 text-[#0A0A0A]">Standard</div>
         <p class="text-[#0A0A0A] text-base">
           Enjoy a well-earned night’s sleep in a Grand Deluxe Room. Spacious and impeccably stylish with a dash of
-          timeless grand dame glamour, cozy up into fine cotton linens, comfy duvet and soft pillows on a king sized
-          bed.
+          timeless grand dame glamour
         </p>
       </div>
       <div class="px-6 pt-4 pb-2">
@@ -105,7 +104,7 @@
         <div class="font-bold text-xl mb-2 text-[#0A0A0A]">Suite</div>
         <p class="text-[#0A0A0A] text-base">
           A union of historical splendor, modern convenience and comfort, our Heritage Suites are known for their
-          elegant interiors that continue to entice guests with their old charm.
+          elegant interiors 
         </p>
       </div>
       <div class="px-6 pt-4 pb-2">
