--- a/src/app/select-room/select-room.component.html
+++ b/src/app/select-room/select-room.component.html
@@ -14,7 +14,7 @@
         <div class="font-bold text-xl mb-2 text-[#0A0A0A]">Standard</div>
         <p class="text-[#0A0A0A] text-base">
           Enjoy a well-earned night’s sleep in a Grand Deluxe Room. Spacious and impeccably stylish with a dash of
-          timeless grand dame glamour
+          timeless grand dame
         </p>
       </div>
       <div class="px-6 pt-4 pb-2">
